<?xml version="1.0"?>
<package format="2">
  <name>astrobee_task_planning_examples</name>
  <version>0.1.0</version>
  <description>Astrobee task planning examples</description>

  <maintainer email="ana@traclabs.com">Ana C.H.Q.</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>lifecycle_msgs</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>ff_msgs</depend>
  
</package>
